[tool.poetry]
name = "python-telegram-chatgpt-bot"
version = "0.1.0"
description = "telegram bot created by Bogdan Torkhov that uses chatgpt"
authors = ["deusbog <deusbogdan@gmail.com>"]
license = "GPL-3"
readme = "README.md"
packages = [{include = "python_telegram_chatgpt_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "2.25.1"
openai = "0.27.0"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
